cambio landing page style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
-<div class="container">
-  <div class="content">
-    <h3>Rational Thinking</h3>
-    <h1>Work in progress...</h1>
+<div class="header-blu w-full h-screen flex justify-start">
+  <div class="mt-8 flex flex-col gap-4 w-full">
+    <div class="ml-8 flex flex-col">
+      <div
+        class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-100 uppercase font-extrabold text-3xl"
+      >
+        Rational Thinking
+      </div>
+      <div
+        class="bg-clip-text text-transparent bg-gradient-to-r from-pink-400 to-violet-100 font-bold"
+      >
+        Work in progress...
+      </div>
+    </div>
   </div>
 </div>
