--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,6 @@
-
-.navbar{
-    background-image: url("../assets/images/navbar.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-
+/** LIGHT THEME */
+$blue: #010440;
+$light-blue: #2d3340;
+$dark-lime: #6a8c20;
+$lime: #bff205;
+$yellow: #d7f205;
