--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div
-  class="blur-2x w-full h-full flex justify-center align-middle items-center"
+  class="bg-animated bg-light-blue blur-2x w-full h-full flex justify-center align-middle items-center"
 >
-  <div class="flex w-1/2 text-center flex-col text-4xl gap-4">
+  <div class="flex w-fit text-center flex-col text-4xl gap-4">
     <label
       *ngFor="let item of menu"
-      class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 font-semibold font-mono transition ease-in-out delay-75 hover:translate-x-4 hover:skew-y-2 hover:scale-105 hover:duration-150"
+      class="cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-dark-lime via-lime to-yellow font-semibold font-mono transition ease-in-out delay-75 hover:translate-x-4 hover:skew-y-2 hover:scale-105 hover:duration-200"
     >
       {{ item.name | titlecase }}</label
     >
