--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <div class="header w-full h-screen flex justify-start">
   <div class="bg-blue shadow-xl flex sticky h-16 w-full">
-    <div class="text-yellow w-11/12">Rationality is the key</div>
-    <button (click)="openMenu()" class="flex justify-end w-1/12">
-      <app-burger [isOpen]="menuStatus"></app-burger>
-      <div
-        *ngIf="menuStatus"
-        class="menu shadow-xl h-screen absolute inset-0 border-0"
-      >
-        <app-menu></app-menu>
+    <div
+      class="flex gap-4 justify-center entrance-animation text text-yellow w-full"
+    >
+      <label>Rationality is the</label>
+      <label>key</label>
+    </div>
+    <button (click)="openMenu()" class="absolute right-0 flex justify-end">
+      <div class="z-50 entrance-animation">
+        <app-burger [isOpen]="menuStatus"></app-burger>
       </div>
     </button>
+    <div *ngIf="menuStatus" class="menu h-screen absolute inset-0 border-0">
+      <app-menu [isOpen]="menuStatus"></app-menu>
+    </div>
   </div>
 </div>
