--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,29 @@ $light-blue: #2d3340;
 $dark-lime: #6a8c20;
 $lime: #bff205;
 $yellow: #d7f205;
+
+@import "https://fonts.googleapis.com/css?family=Trispace:300,400,600,700";
+@keyframes text-top {
+  0% {
+    letter-spacing: 1em;
+    transform: translateZ(400px) translateY(-300px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+.entrance-animation {
+  animation: text-top 1.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+}
+.text {
+  color: $yellow;
+  font-family: "Trispace", sans-serif;
+  height: 100%;
+  font-size: 2.5em;
+  font-weight: 900;
+}
