--- a/src/app/menu/burger/burger.component.html
+++ b/src/app/menu/burger/burger.component.html
@@ -1,3 +1,3 @@
 <div [ngClass]="{ open: isOpen }" (click)="openBurger()" class="menu-btn">
-  <div class="btn-burger bg-lime before:bg-lime after:bg-lime"></div>
+  <div class="btn-burger"></div>
 </div>
