--- a/src/app/menu/burger/burger.component.scss
+++ b/src/app/menu/burger/burger.component.scss
@@ -12,7 +12,7 @@
 }
 .btn-burger {
   position: absolute;
-  background-color: $lime;
+  background-color: $yellow;
   width: 50px;
   height: 4px;
   border-radius: 4px;
@@ -23,7 +23,7 @@
 .btn-burger::after {
   content: "";
   position: absolute;
-  background-color: $lime;
+  background-color: $yellow;
   right: 0px;
   width: 50px;
   height: 4px;
@@ -44,9 +44,9 @@
 }
 .open .btn-burger::before {
   transform: rotate(45deg) translate(45px, -45px);
-  background-color: $blue;
+  background-color: $yellow;
 }
 .open .btn-burger::after {
   transform: rotate(-45deg) translate(45px, 45px);
-  background-color: $blue;
+  background-color: $yellow;
 }
