--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,23 +22,11 @@
     *ngIf="!menuStatus"
     class="bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
   >
-    <label class="entrance-animation">
-      <div class="flex flex-col justify-center items-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-48 w-48"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-          />
-        </svg>
-        <label class="text">Work in progress</label>
+    <label class="max-w-[80%]">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-6">
+        <div *ngFor="let item of articles">
+          <app-article [article]="item"></app-article>
+        </div>
       </div>
     </label>
   </div>
