--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -4,7 +4,7 @@
   <img class="w-full rounded-md" [src]="article.image" />
   <div class="flex flex-col pt-6 pb-6 px-4 gap-4">
     <div
-      class="lg:text-md text-blue rich-text text-3xl font-medium leading-[1.3] text-dark-green font-serif-display group-text-color-hover-primary"
+      class="lg:text-md text-blue rich-text text-3xl font-medium leading-[1.3] font-serif-display group-text-color-hover-primary"
     >
       <h1>{{ article.title }}</h1>
     </div>
