--- a/src/app/shared/articles-displayer/articles-displayer.component.html
+++ b/src/app/shared/articles-displayer/articles-displayer.component.html
@@ -1,5 +1,7 @@
-<div class="max-w-6xl">
+<div class="fadeIn max-w-6xl">
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-6 px-4">
-    <app-article *ngFor="let article of [1, 2, 3, 4]"></app-article>
+    <app-article
+      *ngFor="let article of [1, 2, 3, 4, 5, 6, 7, 8, 9]"
+    ></app-article>
   </div>
 </div>
