--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,24 @@
-<div class="relative header w-full h-screen justify-start">
-  <div class="bg-blue shadow-xl flex sticky h-20 w-full">
+<div
+  class="bg-blue md:bg-opacity-20 md:bg-transparent relative header w-full h-full z-0 justify-start"
+>
+  <div
+    class="bg-transparent md:bg-blue shadow-sm md:shadow-xl flex sticky h-20 w-full"
+  >
     <div
       class="relative flex flex-col entrance-animation text text-yellow w-full"
     >
-      <div class="flex justify-center w-full align-top">
-        <label>RATI</label>
+      <div class="flex justify-left md:justify-center w-full align-top">
+        <label class="hidden md:block">RATI</label>
         <img
+          *ngIf="!menuStatus"
           src="../assets/images/brainLogo.png"
           alt="logo"
-          class="animate-pulse relative top-2 w-10 h-10"
+          class="animate-pulse relative top-2 -right-4 md:right-0 w-16 h-16 md:w-10 md:h-10 lg:w-10 lg:h-10"
         />
-        <label>NALITY</label>
+        <label class="hidden md:block">NALITY</label>
       </div>
       <label
-        class="relative -top-2 flex justify-center w-full text-xs text-left text-lime"
+        class="hidden md:flex relative -top-2 flex justify-center w-full text-xs text-left text-lime"
         >Rationality is the Key</label
       >
     </div>
@@ -31,7 +36,7 @@
   </div>
   <div
     *ngIf="!menuStatus"
-    class="bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
+    class="z-20 bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
   >
     <app-articles-displayer> </app-articles-displayer>
   </div>
