--- a/src/app/shared/article/article.component.scss
+++ b/src/app/shared/article/article.component.scss
@@ -7,12 +7,11 @@ article:hover {
   transform: scale(1.05);
   transform: translateY(-5px);
 }
+article:hover img {
+  border-bottom: 4px solid $yellow;
+  filter: grayscale(0%);
+}
 article img {
   border-bottom: 4px solid $blue;
   filter: grayscale(80%);
-
-  &:hover {
-    border-bottom: 4px solid $yellow;
-    filter: grayscale(0%);
-  }
 }
