--- a/src/app/shared/articles-displayer/articles-displayer.component.scss
+++ b/src/app/shared/articles-displayer/articles-displayer.component.scss
@@ -28,10 +28,12 @@
 }
 
 .fadeIn *:nth-child(odd) {
-  animation: fadeIn 2s ease-in-out;
-  animation: fromRight 2s ease-in-out;
+  animation: fadeIn 500ms ease-in-out;
+  animation: fromRight 1s ease-in-out;
+  animation-delay: 1s;
 }
 .fadeIn *:nth-child(even) {
-  animation: fadeIn 2s ease-in-out;
-  animation: fromLeft 2s ease-in-out;
+  animation: fadeIn 500ms ease-in-out;
+  animation: fromLeft 1s ease-in-out;
+  animation-delay: 1s;
 }
