--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-blue md:bg-opacity-20 md:bg-transparent relative header w-full h-full z-0 justify-start"
+  class="bg-blue md:bg-blue md:bg-opacity-10 relative header w-full h-full z-0 justify-start"
 >
   <div
     class="bg-transparent md:bg-blue shadow-sm md:shadow-xl flex sticky h-20 w-full"
