--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div
-  class="bg-blue md:bg-blue md:bg-opacity-10 relative header w-full h-full z-0 justify-start"
+  class="bg-blue md:bg-blue md:bg-opacity-10 relative header w-full h-full justify-start"
 >
   <div
-    class="bg-transparent md:bg-blue shadow-sm md:shadow-xl flex sticky h-20 w-full"
+    class="z-50 bg-transparent md:bg-blue shadow-sm md:shadow-xl flex sticky md:fixed h-20 w-full"
   >
     <div
       class="relative flex flex-col entrance-animation text text-yellow w-full"
@@ -10,7 +10,6 @@
       <div class="flex justify-left md:justify-center w-full align-top">
         <label class="hidden md:block">RATI</label>
         <img
-          *ngIf="!menuStatus"
           src="../assets/images/brainLogo.png"
           alt="logo"
           class="animate-pulse relative top-2 -right-4 md:right-0 w-16 h-16 md:w-10 md:h-10 lg:w-10 lg:h-10"
@@ -35,8 +34,7 @@
     </div>
   </div>
   <div
-    *ngIf="!menuStatus"
-    class="z-20 bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
+    class="bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
   >
     <app-articles-displayer> </app-articles-displayer>
   </div>
