--- a/src/app/shared/articles-displayer/articles-displayer.component.html
+++ b/src/app/shared/articles-displayer/articles-displayer.component.html
@@ -1,6 +1,6 @@
 <div class="relative flex flex-col max-w-6xl pb-14 px-4 md:py-14">
   <h1
-    class="font-extrabold absolute md:relative pl-2 left-16 md:left-0 fadeOpacity -top-16 md:top-0 text-yellow md:text-blue pb-8 article-text"
+    class="md:mt-20 font-extrabold absolute md:relative pl-2 left-16 md:left-0 fadeOpacity -top-16 md:top-0 text-yellow md:text-blue pb-8 article-text"
   >
     Articoli
   </h1>
