--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,6 @@ $dark-lime: #6a8c20;
 $lime: #bff205;
 $yellow: #d7f205;
 
-@import "https://fonts.googleapis.com/css?family=Trispace:300,400,600,700";
 @keyframes text-top {
   0% {
     letter-spacing: 1em;
@@ -33,7 +32,7 @@ $yellow: #d7f205;
   animation: text-top 1.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
 }
 .text {
-  font-family: "Trispace", sans-serif;
+  font-family: "rationality-font", sans-serif;
   height: 100%;
   font-size: 2.5em;
   font-weight: 900;
