--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "rationality-font";
+  src: url("./assets/font/Sk-Modernist-Regular.otf") format("opentype");
+}
