--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
       *ngIf="!menuStatus"
       class="z-50 md:z-0 bg-blue md:bg-transparent grid place-items-center text-4xl text-blue flex sticky h-full w-full"
     >
-      <app-articles-displayer> </app-articles-displayer>
+      <app-menu></app-menu>
     </div>
   </div>
   <div
