--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -4,13 +4,15 @@
   <img
     class="border-b-4 w-full rounded-t-md"
     [alt]=""
-    [src]="article.fields.background.fields.file.url"
+    [src]="
+      article.fields.background ? article.fields.background.fields.file.url : ''
+    "
   />
   <div class="flex flex-col pt-6 pb-6 px-4 gap-4">
     <div
       class="lg:text-md text-yellow md:text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
     >
-      <h1></h1>
+      <h1>{{ article.title }}</h1>
     </div>
     <div
       class="text-sm lg:text-sm text-ellipsis overflow-hidden max-h-full text-lime text-opacity-80 md:text-blue"
