--- a/src/app/shared/articles-displayer/articles-displayer.component.html
+++ b/src/app/shared/articles-displayer/articles-displayer.component.html
@@ -1,5 +1,5 @@
 <div
-  *ngIf="articles$ | async as articles"
+  *ngIf="results$ | async as results"
   class="relative flex flex-col max-w-6xl pb-14 px-4 md:py-14"
 >
   <h1
@@ -10,7 +10,7 @@
   <div
     class="fadeIn grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-8"
   >
-    <div *ngFor="let article of articles.items">
+    <div *ngFor="let article of results.items">
       <app-article [article]="article"></app-article>
     </div>
   </div>
