--- a/src/app/shared/articles-displayer/articles-displayer.component.html
+++ b/src/app/shared/articles-displayer/articles-displayer.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="results$ | async as results"
-  class="relative flex flex-col max-w-6xl pb-14 px-4 md:py-14"
+  class="relative flex flex-col max-w-7xl pb-14 px-4 md:py-14 h-full min-h-screen"
 >
   <h1
     class="md:mt-20 font-extrabold absolute md:relative pl-2 left-16 md:left-0 fadeOpacity -top-16 md:top-0 text-yellow md:text-blue pb-8 article-text"
@@ -8,9 +8,12 @@
     Articoli
   </h1>
   <div
-    class="fadeIn grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-8"
+    class="fadeIn grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-x-6 gap-y-8"
   >
-    <div *ngFor="let article of results.items">
+    <div
+      *ngFor="let article of results.items; let i = index"
+      [ngClass]="i % 3 === 0 ? 'col-span-1 sm:col-span-2' : 'col-span-1'"
+    >
       <app-article [article]="article"></app-article>
     </div>
   </div>
