--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -4,20 +4,19 @@
   <img
     class="border-b-4 w-full rounded-t-md"
     [alt]=""
-    [src]="
-      article.fields.background ? article.fields.background.fields.file.url : ''
-    "
+    [src]="parsedArticle.image"
   />
-  <div class="flex flex-col pt-6 pb-6 px-4 gap-4">
+  <div class="flex flex-col pt-6 pb-6 px-6 gap-4">
     <div
       class="lg:text-md text-yellow md:text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
     >
-      <h1>{{ article.title }}</h1>
+      <h1>{{ parsedArticle.title }}</h1>
     </div>
-    <div
-      class="text-sm lg:text-sm text-ellipsis overflow-hidden max-h-full text-lime text-opacity-80 md:text-blue"
+    <button
+      (click)="changeRoute(parsedArticle.id)"
+      class="w-fit rounded border-2 text-sm lg:text-sm text-ellipsis overflow-hidden max-h-full text-lime text-opacity-80 md:text-blue"
     >
-      <p></p>
-    </div>
+      <p class="font-bold px-2 py-4 w-fit">Read full article</p>
+    </button>
   </div>
 </article>
