--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -1,11 +1,12 @@
 <article
-  class="cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] border-b md:border-b-light-blue transition duration-200 ease-in-out md:shadow-blue md:shadow-sm md:hover:shadow-md md:hover:shadow-blue shadow-lime shadow-sm hover:shadow-md hover:shadow-lime md:hover:border-opacity-0"
+  class="relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] border-b md:border-b-light-blue transition duration-200 ease-in-out md:shadow-blue md:shadow-sm md:hover:shadow-md md:hover:shadow-blue shadow-lime shadow-sm hover:shadow-md hover:shadow-lime md:hover:border-opacity-0"
 >
-  <img
-    class="border-b-4 w-full rounded-t-md"
-    [alt]=""
-    [src]="parsedArticle.image"
-  />
+  <div class="w-full h-96 overflow-hidden w-full rounded-t-md">
+    <div
+      class="img h-full w-full"
+      [ngStyle]="{ 'background-image': 'url(' + parsedArticle.image + ')' }"
+    ></div>
+  </div>
   <div class="flex flex-col pt-6 pb-6 px-6 gap-4">
     <div
       class="lg:text-md text-yellow md:text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
@@ -18,5 +19,17 @@
     >
       <p class="font-bold px-2 py-4 w-fit">Read full article</p>
     </button>
+  </div>
+  <!-- notifica nuovo articolo -->
+  <div
+    *ngIf="parsedArticle.publicationDate"
+    class="notification absolute grid place-items-center -top-3 -right-3 w-8 h-8 rounded-full bg-blue text-white"
+  >
+    <!-- testo all'interno del div -->
+    <p
+      class="grid place-items-center h-fit mb-1 text-xs font-bold text-center text-yellow"
+    >
+      New
+    </p>
   </div>
 </article>
