--- a/src/app/home/articles-displayer/article/article.component.scss
+++ b/src/app/home/articles-displayer/article/article.component.scss
@@ -1,17 +1,38 @@
 @import "colors";
 
 article {
+  font-family: "rationality-font", sans-serif;
   transition: all 0.3s ease-in-out;
 }
+article .img {
+  transition: all 0.5s ease-in-out;
+}
 article:hover {
-  transform: scale(1.05);
   transform: translateY(-5px);
 }
-article:hover img {
-  border-bottom: 4px solid $yellow;
+
+article:hover .img {
+  transform: scale(1.05);
   filter: grayscale(0%);
 }
-article img {
-  border-bottom: 4px solid $blue;
+article .img {
+  background-size: cover;
+  border-bottom: 4px solid #fff;
   filter: grayscale(80%);
+}
+
+// notification style
+@keyframes notification {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.notification {
+  animation: notification 1.25s ease-in-out infinite;
 }
