--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,7 @@
   font-family: "rationality-font";
   src: url("./assets/font/Sk-Modernist-Regular.otf") format("opentype");
 }
+
+* {
+  font-family: "rationality-font" !important;
+}
