--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -1,1 +1,11 @@
-<div class="realtive h-full min-h-screen mt-20"></div>
+<div class="h-full w-full min-h-screen mt-20">
+  <div *ngIf="article$ | async; else spinner">
+    <div id="sectionOne"></div>
+    <div id="sectionTwo"></div>
+  </div>
+</div>
+<ng-template #spinner>
+  <div class="absolute inset-x-1/2 top-1/3 w-fit h-fit">
+    <spinner></spinner>
+  </div>
+</ng-template>
