--- a/src/app/shared/burger/burger.component.scss
+++ b/src/app/shared/burger/burger.component.scss
@@ -12,7 +12,7 @@
 }
 .btn-burger {
   position: absolute;
-  background-color: $yellow;
+  background-color: $light-blue;
   width: 50px;
   height: 4px;
   border-radius: 4px;
@@ -23,7 +23,7 @@
 .btn-burger::after {
   content: "";
   position: absolute;
-  background-color: $yellow;
+  background-color: $light-blue;
   right: 0px;
   width: 50px;
   height: 4px;
