--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -1,9 +1,9 @@
 <article
   class="relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] border-b md:border-b-light-blue transition duration-200 ease-in-out md:shadow-blue md:shadow-sm md:hover:shadow-md md:hover:shadow-blue shadow-lime shadow-sm hover:shadow-md hover:shadow-lime md:hover:border-opacity-0"
 >
-  <div class="w-full h-96 overflow-hidden w-full rounded-t-md">
+  <div class="h-full aspect-[16/9] overflow-hidden w-full rounded-t-md">
     <div
-      class="img h-full w-full"
+      class="img h-full "
       [ngStyle]="{ 'background-image': 'url(' + parsedArticle.image + ')' }"
     ></div>
   </div>
