fix componente dettaglio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-menu [isOpen]="menuStatus"></app-menu>
   </div>
   <div
-    class="relative dark:bg-dark-blue dark:md:bg-opacity-10 relative header w-full h-full justify-start"
+    class="relative bg-dark-blue bg-opacity-20 relative header w-full h-full justify-start"
   >
     <div class="z-50 bg-transparent flex sticky md:fixed h-20 w-full">
       <div
