--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -3,21 +3,23 @@
 >
   <div class="h-full aspect-[16/9] overflow-hidden w-full rounded-t-md">
     <div
-      class="img h-full "
+      class="img h-full"
       [ngStyle]="{ 'background-image': 'url(' + parsedArticle.image + ')' }"
     ></div>
   </div>
   <div class="flex flex-col pt-6 pb-6 px-6 gap-4">
     <div
-      class="lg:text-md text-yellow md:text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
+      class="lg:text-md text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
     >
       <h1>{{ parsedArticle.title }}</h1>
     </div>
     <button
       (click)="changeRoute(parsedArticle.id)"
-      class="w-fit rounded border-2 text-sm lg:text-sm text-ellipsis overflow-hidden max-h-full text-lime text-opacity-80 md:text-blue"
+      class="w-fit rounded border-2 text-sm text-ellipsis overflow-hidden max-h-full text-opacity-80 text-blue"
     >
-      <p class="font-bold px-2 py-4 w-fit">Read full article</p>
+      <p class="text-sm font-extrabold px-2 py-4 w-fit">
+        Leggi l'articolo completo
+      </p>
     </button>
   </div>
   <!-- notifica nuovo articolo -->
