--- a/src/app/home/articles-displayer/article/article.component.scss
+++ b/src/app/home/articles-displayer/article/article.component.scss
@@ -10,15 +10,27 @@ article .img {
 article:hover {
   transform: translateY(-5px);
 }
-
+button p:hover {
+  background-color: $blue;
+  backdrop-filter: blur(5px);
+  color: $yellow;
+}
+button:hover {
+  transform: translateY(-5px);
+}
+button p,
+button {
+  background-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
 article:hover .img {
   transform: scale(1.05);
   filter: grayscale(0%);
 }
 article .img {
-  background-repeat:no-repeat;
-  background-size:cover;
-  background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   border-bottom: 4px solid #fff;
   filter: grayscale(80%);
 }
