--- a/src/app/home/articles-displayer/articles-displayer.component.html
+++ b/src/app/home/articles-displayer/articles-displayer.component.html
@@ -3,18 +3,14 @@
   class="relative flex flex-col max-w-7xl pb-14 px-4 md:py-14 h-full min-h-screen"
 >
   <h1
-    class="md:mt-20 font-extrabold absolute md:relative pl-2 left-16 md:left-0 fadeOpacity -top-16 md:top-0 text-yellow md:text-blue pb-8 article-text"
+    class="md:mt-20 font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
   >
     Articoli
   </h1>
   <div
-
     class="fadeIn grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-x-6 gap-y-8"
   >
-    <div
-      *ngFor="let article of results.items; let i = index"
-
-    >
+    <div *ngFor="let article of results.items; let i = index">
       <app-article [article]="article"></app-article>
     </div>
   </div>
