--- a/src/app/home/articles-displayer/articles-displayer.component.html
+++ b/src/app/home/articles-displayer/articles-displayer.component.html
@@ -3,7 +3,7 @@
   class="relative flex flex-col max-w-7xl pb-14 px-4 md:py-14 h-full min-h-screen"
 >
   <h1
-    class="md:mt-20 font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
+    class="pt-20 font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
   >
     Articoli
   </h1>
