--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -1,5 +1,5 @@
 <article
-  class="relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] border-b md:border-b-light-blue transition duration-200 ease-in-out md:shadow-blue md:shadow-sm md:hover:shadow-md md:hover:shadow-blue shadow-lime shadow-sm hover:shadow-md hover:shadow-lime md:hover:border-opacity-0"
+  class="relative cursor-pointer rounded-md group mt-6 sm:mt-[1.875rem] md:mt-[2.25rem] lg:mt-[2.625rem] xl:mt-[3rem] transition duration-200 ease-in-out shadow-md hover:shadow-blue"
 >
   <div class="h-full aspect-[16/9] overflow-hidden w-full rounded-t-md">
     <div
@@ -7,7 +7,7 @@
       [ngStyle]="{ 'background-image': 'url(' + parsedArticle.image + ')' }"
     ></div>
   </div>
-  <div class="flex flex-col pt-6 pb-6 px-6 gap-4">
+  <div class="h-48 flex flex-col pt-6 pb-6 px-6 gap-4">
     <div
       class="lg:text-md text-blue rich-text text-3xl leading-[1.3] font-serif-display group-text-color-hover-primary"
     >
