--- a/src/app/home/articles-displayer/articles-displayer.component.html
+++ b/src/app/home/articles-displayer/articles-displayer.component.html
@@ -1,9 +1,9 @@
 <div
   *ngIf="results$ | async as results"
-  class="relative flex flex-col max-w-7xl pb-14 px-4 md:py-14 h-full min-h-screen"
+  class="relative flex flex-col max-w-7xl pb-14 px-4 md:py-14"
 >
   <h1
-    class="pt-20 font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
+    class="pt-20 font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity md:top-0 text-blue pb-8 article-text"
   >
     Articoli
   </h1>
