--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <app-menu [isOpen]="menuStatus"></app-menu>
   </div>
   <div class="relative relative header w-full h-full justify-start">
-    <div class="z-50 flex stycky md:fixed h-20 w-full">
+    <div class="z-40 flex sticky h-20 w-full">
       <div
         [ngClass]="!menuStatus ? 'open' : ' closed'"
-        class="navbar relative flex flex-col text text-blue w-full"
+        class="relative flex flex-col text text-blue w-full h-20"
       >
         <div class="flex justify-left md:justify-center w-full align-top">
           <label class="entrance-text hidden md:block">RATI</label>
@@ -35,7 +35,7 @@
 
     <div
       *ngIf="!menuStatus"
-      class="z-50 md:z-0 md:bg-transparent grid place-items-center text-4xl flex sticky h-full w-full"
+      class="z-50 md:z-0 md:bg-transparent grid place-items-center text-4xl flex w-full"
     >
       <router-outlet></router-outlet>
     </div>
