--- a/src/app/home/articles-displayer/article/article-details/article-details.component.scss
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.scss
@@ -1,49 +1,12 @@
 @import "colors";
-.wrapper {
-  position: relative;
-  height: 100vh;
-  overflow-y: auto;
-  perspective: 10px;
-}
-.wrapper::-webkit-scrollbar {
-  display: none;
-}
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.wrapper {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
 .title {
-  position: sticky;
-  top: 1rem;
-  padding: 1rem;
-  font-size: 5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   color: $blue;
   color: white;
   text-shadow: 0 0 5px $blue;
-}
-header {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  transform-style: preserve-3d;
-  z-index: -1;
-}
-.background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-  transform: translateZ(-10px) scale(2);
-}
-
-section {
-  font-size: 2rem;
-  padding: 5rem;
-  background-color: white;
-  color: $blue;
 }
