--- a/src/app/home/articles-displayer/article/article.component.html
+++ b/src/app/home/articles-displayer/article/article.component.html
@@ -18,7 +18,7 @@
       class="w-fit rounded border-2 text-sm text-ellipsis overflow-hidden max-h-full text-opacity-80 text-blue"
     >
       <p class="text-sm font-extrabold px-2 py-4 w-fit">
-        Leggi l'articolo completo
+        Vai all' articolo
       </p>
     </button>
   </div>
