--- a/src/app/home/articles-displayer/articles-displayer.component.scss
+++ b/src/app/home/articles-displayer/articles-displayer.component.scss
@@ -14,12 +14,7 @@
   0% {
     transform: translateX(-100%);
   }
-  80% {
-    transform: translateX(5%);
-  }
-  90% {
-    transform: translateX(-5%);
-  }
+
   100% {
     transform: translateX(0);
   }
@@ -28,27 +23,19 @@
   0% {
     transform: translateX(100%);
   }
-  70% {
-    transform: translateX(-5%);
-  }
-  80% {
-    transform: translateX(2%);
-  }
-  90% {
-    transform: translateX(-2%);
-  }
+
   100% {
     transform: translateX(0);
   }
 }
 
 .fadeOpacity {
-  animation: fadeIn 2s ease-in-out;
+  animation: fadeIn 700ms ease-in-out;
 }
 
 .fadeIn *:nth-child(odd) {
-  animation: fromRight 1s ease-in-out;
+  animation: fromRight 0.5s ease-in-out;
 }
 .fadeIn *:nth-child(even) {
-  animation: fromBottom 1.2s ease-in-out;
+  animation: fromBottom 0.5s ease-in-out;
 }
