--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -1,20 +1,20 @@
 <div class="relative h-full w-full min-h-screen">
   <div *ngIf="article$ | async; else spinner">
-    <div>
+    <article class="mx-auto max-w-5xl px-8">
       <img
-        class="relative h-screen w-full object-cover"
+        class="absolute aspect-video w-full left-1/2 object-cover"
         src="{{ article.image.url }}"
         alt="{{ article.image.description }}"
       />
-      <h1 class="title text-ellipsis text-6xl">
-        {{ article.title | uppercase }}
+      <h1 class="text-ellipsis text-6xl">
+        {{ article.title | titlecase }}
       </h1>
 
       <section
-        class="mx-auto px-4"
+        class="mt-20 mx-auto prose-blue md:prose-md lg:prose-xl"
         [innerHtml]="_returnHtmlFromRichText(article.content)"
       ></section>
-    </div>
+    </article>
   </div>
 </div>
 <ng-template #spinner>
