sistemato dettaglio articolo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <div class="w-full h-full fixed">
     <app-menu [isOpen]="menuStatus"></app-menu>
   </div>
-  <div class="relative relative header w-full h-full justify-start">
-    <div class="z-40 flex sticky h-20 w-full overflow-hidden">
+  <div class="relative header w-full h-full justify-start">
+    <div class="z-40 sticky h-20 w-full overflow-hidden">
       <div
         [ngClass]="!menuStatus ? 'open' : ' closed'"
-        class="relative flex flex-col text text-blue w-full h-20"
+        class="relative flex flex-col text text-blue_background w-full h-20"
       >
         <div class="flex justify-left md:justify-center w-full align-top">
           <label class="entrance-text hidden md:block">RATI</label>
@@ -25,18 +25,15 @@
       </div>
       <button
         (click)="openMenu()"
-        class="h-full absolute right-0 flex justify-end"
+        class="h-full z-[1000] absolute top-0 right-0 flex justify-end"
       >
-        <div class="entrance-button z-50">
+        <div class="entrance-button">
           <app-burger [isOpen]="menuStatus"></app-burger>
         </div>
       </button>
     </div>
 
-    <div
-      *ngIf="!menuStatus"
-      class="z-50 md:z-0 md:bg-transparent grid place-items-center text-4xl flex w-full"
-    >
+    <div *ngIf="!menuStatus">
       <router-outlet></router-outlet>
     </div>
   </div>
