--- a/src/app/shared/burger/burger.component.html
+++ b/src/app/shared/burger/burger.component.html
@@ -1,3 +1,5 @@
 <div [ngClass]="{ open: isOpen }" (click)="openBurger()" class="menu-btn">
-  <div class="btn-burger"></div>
+  <div
+    class="btn-burger bg-blue_background after:bg-blue_background before:bg-blue_background"
+  ></div>
 </div>
