--- a/src/app/home/articles-displayer/article/article-details/article-details.component.html
+++ b/src/app/home/articles-displayer/article/article-details/article-details.component.html
@@ -1,17 +1,29 @@
-<div class="relative h-full w-full min-h-screen">
+<div class="h-full w-full min-h-screen overflow-x-hidden">
   <div *ngIf="article$ | async; else spinner">
-    <article class="mx-auto max-w-5xl px-8">
+    <header class="relative w-screen h-screen">
+      <div class="relative h-2/3 md:h-2/3 lg:h-1/2 bg-blue_background">
+        <h1
+          class="W-fit text-[3rem] md:text-[5rem] overflow-hidden top-20 underline decoration-2 underline-offset-8 decoration-lime text-white font-thin mx-8"
+        >
+          {{ article.title | titlecase }}
+        </h1>
+        <p
+          class="lg:absolute w-full lg:w-1/3 pt-16 bottom-0 right-8 text-white underline decoration-lime underline-offset-4 font-thin text-[1.5rem] px-8 py-8"
+        >
+          {{ article.description }}
+        </p>
+      </div>
       <img
-        class="absolute aspect-video w-full left-1/2 object-cover"
+        class="border border-yellow rounded-lg absolute bottom-[17.5%] lg:bottom-[35%] left-[2.75%] lg:left-0 lg:ml-8 w-11/12 md:w-auto md:h-1/3 aspect-video object-cover"
         src="{{ article.image.url }}"
         alt="{{ article.image.description }}"
       />
-      <h1 class="text-ellipsis text-6xl">
-        {{ article.title | titlecase }}
-      </h1>
-
+    </header>
+    <article
+      class="absolute w-full top-[70%] md:top-[70%] lg:top-[55%] flex bg-[#d6f2050b] justify-center"
+    >
       <section
-        class="mt-20 mx-auto prose-blue md:prose-md lg:prose-xl"
+        class="prose lg:prose-2xl px-8 py-64"
         [innerHtml]="_returnHtmlFromRichText(article.content)"
       ></section>
     </article>
