--- a/src/app/home/articles-displayer/articles-displayer.component.html
+++ b/src/app/home/articles-displayer/articles-displayer.component.html
@@ -1,14 +1,14 @@
 <div
   *ngIf="results$ | async as results"
-  class="relative flex flex-col max-w-full pb-14 mx-auto md:py-14"
+  class="relative flex flex-col items-center max-w-full pb-14 mx-auto md:py-14"
 >
   <h1
-    class="font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
+    class="text-[2rem] font-extrabold absolute md:relative pl-2 left-20 md:left-0 fadeOpacity -top-16 md:top-0 text-blue pb-8 article-text"
   >
     Articoli
   </h1>
   <div
-    class="fadeIn grid grid-cols-1 px-4 md:px-0 md:flex lg:flex-row gap-x-6 gap-y-8"
+    class="fadeIn grid grid-cols-1 px-4 md:px-0 md:flex md:flex-row md:justify-center gap-x-6 gap-y-8"
   >
     <div *ngFor="let article of results.items; let i = index">
       <app-article [article]="article"></app-article>
